# implementations/dag-core/internal/application/dagruntime/usecase/request.go
@@ -17,6 +17,9 @@ type RunWorkflowRequest struct {
 	Bars           []float64
 	OHLCVBars      []marketdata.OHLCV
 	SpreadBps      float64
+	FeeBps         float64
+	SlippageBps    float64
+	MinLot         float64
 	AccountBalance float64
 	Marketdata     *MarketdataRunInput
 	RunID          string
